<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    tools:context=".SignUp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:text="@string/judul4"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="15pt"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="40dp">

                <EditText
                    android:id="@+id/edtNama"
                    android:layout_width="313dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/eNama"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="40dp">

                <EditText
                    android:id="@+id/edtAlamat"
                    android:layout_width="313dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/eAlamat"
                    android:inputType="textLongMessage" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="Gender"
                android:textSize="8pt"
                android:textStyle="normal" />

            <RadioGroup
                android:id="@+id/Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="40dp">

                <RadioButton
                    android:id="@+id/rbLK"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lk" />

                <RadioButton
                    android:id="@+id/rbPR"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pr" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="Religion"
                android:textSize="8pt"
                android:textStyle="normal" />

            <RadioGroup
                android:id="@+id/horizon1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="40dp">

                <RadioButton
                    android:id="@+id/rbIS"
                    android:layout_width="86dp"
                    android:layout_height="wrap_content"
                    android:text="@string/is" />

                <RadioButton
                    android:id="@+id/rbKat"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kat" />

                <RadioButton
                    android:id="@+id/rbKris"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kris" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/horizon2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="40dp">

                <RadioButton
                    android:id="@+id/rbHin"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Hin" />

                <RadioButton
                    android:id="@+id/rbBud"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Bud" />

                <RadioButton
                    android:id="@+id/rbKong"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kong" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/horizon3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="40dp">

                <RadioButton
                    android:id="@+id/rbLain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lain" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="40dp"
                >

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="313dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/eEmail"
                    android:inputType="textWebEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="40dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/pink">

                <EditText
                    android:id="@+id/edtPass"
                    android:layout_width="313dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/ePass"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="40dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/pink">

                <EditText
                    android:id="@+id/edtRePass"
                    android:layout_width="313dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/erepass"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/horizon4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="40dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/btBack"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:text="@string/batal"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/pink"/>

                <Button
                    android:id="@+id/btRegis"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/regis"
                    app:backgroundTint="@color/pink"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>