<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@drawable/logo2"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="147dp"
        android:layout_height="88dp"
        android:layout_marginStart="36dp"
        android:text="@string/judul3"
        android:textColor="@color/black"
        android:textSize="14pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edEmail"
        android:layout_width="313dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.077">

        <EditText
            android:id="@+id/tEmail"
            android:layout_width="313dp"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/tEmail"
            android:inputType="textWebEmailAddress"
            android:textStyle="normal"
            app:backgroundTint="@color/white"
            android:autofillHints="@string/tEmail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edPassword"
        android:layout_width="313dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmail"
        app:layout_constraintVertical_bias="0.052"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/pink">

        <EditText
            android:id="@+id/tPassword"
            android:layout_width="313dp"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/tPassword"
            android:inputType="textPassword"
            android:textStyle="normal"
            app:backgroundTint="@color/white"
            android:autofillHints="@string/tPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="225dp"
        android:layout_height="69dp"
        android:text="@string/bSignIn"
        android:textSize="17sp"
        app:backgroundTint="@color/pink"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPassword"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/any"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin"
        app:layout_constraintVertical_bias="0.265" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.106"
        app:srcCompat="@drawable/ic_any"
        android:contentDescription="@string/any" />

</androidx.constraintlayout.widget.ConstraintLayout>